# Sudoku

./: CMakeLists.txt
sudoku-project-master/: Makefile  a.out  sudoku.c  sudoku.x
sudoku-project-master/tests/: example1-whitespace.txt  example1.txt
